# Teaching-Shell

./: README.md  pyproject.toml  requirements.txt
MyCustomCommand/: ct.py  where.py
src/stv_terminal/: main.py
src/stv_terminal/core/: Register.py  stv_parse.py
src/stv_terminal/doc/: AboutDecorator.txt  Info.txt  custom-command.txt
src/stv_terminal/utils/: futures.py  handler.py  initialize.py  utils.py
